[[changelog-2.0]]
=== 2.0

* `QueryCount` cleanup
  - Removed following methods on `QueryCountHolder`
    - `getDataSourceNamesAsList()`
    - `put()`
  - Following classes have moved to the `net.ttddyy.dsproxy.listener.count` package
    - `DataSourceQueryCountListener`
    - `QueryCount`
    - `QueryCountHolder`
    - `QueryCountStrategy`
    - `ThreadQueryCountStrategy` (previously `ThreadQueryCountHolder`)
    - `SingleQueryCountStrategy` (previously `SingleQueryCountHolder`)

* Rename and move `net.ttddyy.dsproxy.ExecutionInfo` to
  `net.ttddyy.dsproxy.listener.QueryExecutionInfo`

* Introduce `ParameterSetOperations` to represent set of `ParameterSetOperation`.
  On `QueryInfo`, `[set|get]ParametersList` are replaced to `[set|get]ParameterSetOperations`

* Rename `CallCheckMethodExecutionListener` to `LastExecutionAwareListener` and move it
  from `test` to `main`.

* Added thread id and name to method and query executions

* Changed `ProxyDataSourceBuilder` to generate actual proxy with `DataSourceProxyLogic`.
  Removed `ProxyDataSource`.
 - net.ttddyy.dsproxy.support.ProxyDataSource

* Removed following classes for internal clean up:
  - net.ttddyy.dsproxy.proxy.MethodUtils
  - net.ttddyy.dsproxy.listener.MethodExecutionListenerUtils

* Removed `QueryCount` log creators.
  - net.ttddyy.dsproxy.support.DefaultQueryCountLogEntryCreator
  - net.ttddyy.dsproxy.support.QueryCountLogEntryCreator

  Instead, use `QueryCountFormatter`/`QueryCountJsonFormatter`

* Removed `QueryLogEntryCreator` related classes
  - net.ttddyy.dsproxy.listener.logging.QueryLogEntryCreator
  - net.ttddyy.dsproxy.listener.logging.AbstractQueryLogEntryCreator
  - net.ttddyy.dsproxy.listener.logging.DefaultQueryLogEntryCreator
  - net.ttddyy.dsproxy.listener.logging.DefaultJsonQueryLogEntryCreator

* Removed support to log query count in `ServletRequestListener` or `Filter`
  - net.ttddyy.dsproxy.support.QueryCountLoggerBuilder
  - net.ttddyy.dsproxy.support.QueryCounterClearFilter